include/imgui_wasm_imgui.h


typedef struct ImVec2_t ImVec2;
typedef unsigned int ImGuiID;      
typedef struct ImGuiContext_t ImGuiContext;                                    
typedef struct ImGuiStorage_t ImGuiStorage;                                    
typedef struct ImGuiStyle_t ImGuiStyle;                                        
typedef struct ImGuiTableSortSpecs_t ImGuiTableSortSpecs;                      
typedef struct ImGuiWindowClass_t ImGuiWindowClass;                            
typedef int ImGuiKey;             
typedef int ImGuiMouseCursor;     
typedef int ImGuiColorEditFlags;    
typedef int ImGuiSelectableFlags;   
typedef int ImGuiSliderFlags;       
typedef int ImGuiTabItemFlags;      
typedef int ImGuiTableColumnFlags;  
typedef int ImGuiTableRowFlags;     
typedef int ImGuiTreeNodeFlags;     
typedef void (*ImGuiSizeCallback)(ImGuiSizeCallbackData* data);           
CIMGUI_API void          igSetCurrentContext(ImGuiContext* ctx);
CIMGUI_API void        igShowDemoWindow(bool* p_open );             
CIMGUI_API void        igShowMetricsWindow(bool* p_open );          
CIMGUI_API void        igShowDebugLogWindow(bool* p_open );         
CIMGUI_API void        igShowIDStackToolWindow(bool* p_open );      
CIMGUI_API void        igShowAboutWindow(bool* p_open );            
CIMGUI_API void        igShowStyleEditor(ImGuiStyle* ref );         
CIMGUI_API bool        igShowStyleSelector(const char* label);                  
CIMGUI_API void        igShowFontSelector(const char* label);                   
CIMGUI_API void        igShowUserGuide(void);                                   
CIMGUI_API void igStyleColorsDark(ImGuiStyle* dst );         
CIMGUI_API void igStyleColorsLight(ImGuiStyle* dst );        
CIMGUI_API void igStyleColorsClassic(ImGuiStyle* dst );      
CIMGUI_API void igSetNextWindowSizeConstraints(ImVec2 size_min, ImVec2 size_max, ImGuiSizeCallback custom_callback , void* custom_callback_data ); 
CIMGUI_API void igSetNextWindowContentSize(ImVec2 size);                                                          
CIMGUI_API void igSetNextWindowFocus(void);                                                                       
CIMGUI_API void igSetNextWindowScroll(ImVec2 scroll);                                                             
CIMGUI_API void igSetNextWindowBgAlpha(float alpha);                                                              
CIMGUI_API void igSetNextWindowViewport(ImGuiID viewport_id);                                                     
CIMGUI_API void igSetWindowFocus(void);                                                                           
CIMGUI_API void igSetWindowFocusStr(const char* name);                                                            
CIMGUI_API void  igSetScrollX(float scroll_x);                                               
CIMGUI_API void  igSetScrollY(float scroll_y);                                               
CIMGUI_API void  igSetScrollHereX(float center_x_ratio );                        
CIMGUI_API void  igSetScrollHereY(float center_y_ratio );                        
CIMGUI_API void  igSetScrollFromPosX(float local_x, float center_x_ratio );      
CIMGUI_API void  igSetScrollFromPosY(float local_y, float center_y_ratio );      
CIMGUI_API void  igSetNextItemWidth(float item_width);                        
CIMGUI_API void   igSetCursorScreenPos(ImVec2 pos);      
CIMGUI_API void   igSetCursorPos(ImVec2 local_pos);      
CIMGUI_API void   igSetCursorPosX(float local_x);        
CIMGUI_API void   igSetCursorPosY(float local_y);        
CIMGUI_API void  igSeparator(void);                            
CIMGUI_API void  igSpacing(void);                              
CIMGUI_API void  igUnindent(float indent_w );      
CIMGUI_API void igTextUnformatted(const char* text, const char* text_end );            
CIMGUI_API void igSeparatorText(const char* label);                                                
CIMGUI_API bool igSmallButton(const char* label);                                                              
CIMGUI_API bool igTextLink(const char* label);                                                                 
CIMGUI_API bool igTextLinkOpenURL(const char* label, const char* url );                            
CIMGUI_API bool igSliderFloat(const char* label, float* v, float v_min, float v_max, const char* format , ImGuiSliderFlags flags );                                                            
CIMGUI_API bool igSliderFloat3(const char* label, float v[3], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool igSliderFloat4(const char* label, float v[4], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool igSliderAngle(const char* label, float* v_rad, float v_degrees_min , float v_degrees_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool igSliderInt(const char* label, int* v, int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool igVSliderFloat(const char* label, ImVec2 size, float* v, float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool igVSliderInt(const char* label, ImVec2 size, int* v, int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API void igSetColorEditOptions(ImGuiColorEditFlags flags);                                                                           
CIMGUI_API bool  igTreeNode(const char* label);
CIMGUI_API bool  igTreeNodeEx(const char* label, ImGuiTreeNodeFlags flags );
CIMGUI_API void  igTreePush(const char* str_id);                                                                                
CIMGUI_API void  igTreePushPtr(const void* ptr_id);                                                                             
CIMGUI_API void  igTreePop(void);                                                                                               
CIMGUI_API void  igSetNextItemStorageID(ImGuiID storage_id);                                                                    
CIMGUI_API bool  igTreeNodeGetOpen(ImGuiID storage_id);                                                                         
CIMGUI_API bool igSelectableBoolPtr(const char* label, bool* p_selected, ImGuiSelectableFlags flags , ImVec2 size );          
CIMGUI_API void igTableNextRow(ImGuiTableRowFlags row_flags , float min_row_height ); 
CIMGUI_API bool igTableNextColumn(void);                  
CIMGUI_API bool igTableSetColumnIndex(int column_n);      
CIMGUI_API void igTableSetupColumn(const char* label, ImGuiTableColumnFlags flags , float init_width_or_weight , ImGuiID user_id );
CIMGUI_API void igTableSetupScrollFreeze(int cols, int rows);      
CIMGUI_API void igTableHeader(const char* label);                  
CIMGUI_API void igTableHeadersRow(void);                           
CIMGUI_API void igTableAngledHeadersRow(void);                     
CIMGUI_API ImGuiTableSortSpecs*  igTableGetSortSpecs(void);                           
CIMGUI_API int                   igTableGetColumnCount(void);                         
CIMGUI_API int                   igTableGetColumnIndex(void);                         
CIMGUI_API int                   igTableGetRowIndex(void);                            
CIMGUI_API const char*           igTableGetColumnName(int column_n );       
CIMGUI_API ImGuiTableColumnFlags igTableGetColumnFlags(int column_n );      
CIMGUI_API void                  igTableSetColumnEnabled(int column_n, bool v);       
CIMGUI_API int                   igTableGetHoveredColumn(void);                       
CIMGUI_API void  igSetColumnWidth(int column_index, float width);          
CIMGUI_API void  igSetColumnOffset(int column_index, float offset_x);      
CIMGUI_API bool igTabItemButton(const char* label, ImGuiTabItemFlags flags );      
CIMGUI_API void igSetTabItemClosed(const char* tab_or_docked_window_label);                 
CIMGUI_API void    igSetNextWindowClass(const ImGuiWindowClass* window_class);            
CIMGUI_API void igSetItemDefaultFocus(void);                       
CIMGUI_API void igSetKeyboardFocusHere(int offset );      
CIMGUI_API void igSetNavCursorVisible(bool visible);      
CIMGUI_API void igSetNextItemAllowOverlap(void);      
CIMGUI_API void                  igSetStateStorage(ImGuiStorage* storage);               
CIMGUI_API void        igSetNextFrameWantCaptureKeyboard(bool want_capture_keyboard);            
CIMGUI_API bool igSetItemKeyOwner(ImGuiKey key);      
CIMGUI_API void             igSetMouseCursor(ImGuiMouseCursor cursor_type);                                                  
CIMGUI_API void             igSetNextFrameWantCaptureMouse(bool want_capture_mouse);                                         
CIMGUI_API void        igSetClipboardText(const char* text);
CIMGUI_API void           igUpdatePlatformWindows(void);                              
CIMGUI_API void   igSetWindowFontScale(float scale);      