imgui-wasm-core/src/generated_imgui_api.rs

    #[link_name = "igSelectableBoolPtr"]
    fn c_igSelectableBoolPtr(arg0: *const c_char, arg1: *mut bool, arg2: c_int, arg3: ImVec2) -> bool;
    #[link_name = "igSeparator"]
    fn c_igSeparator() -> ();
    #[link_name = "igSeparatorText"]
    fn c_igSeparatorText(arg0: *const c_char) -> ();
    #[link_name = "igSetClipboardText"]
    fn c_igSetClipboardText(arg0: *const c_char) -> ();
    #[link_name = "igSetColorEditOptions"]
    fn c_igSetColorEditOptions(arg0: c_int) -> ();
    #[link_name = "igSetColumnOffset"]
    fn c_igSetColumnOffset(arg0: c_int, arg1: f32) -> ();
    #[link_name = "igSetColumnWidth"]
    fn c_igSetColumnWidth(arg0: c_int, arg1: f32) -> ();
    #[link_name = "igSetCurrentContext"]
    fn c_igSetCurrentContext(arg0: *mut c_void) -> ();
    #[link_name = "igSetCursorPos"]
    fn c_igSetCursorPos(arg0: ImVec2) -> ();
    #[link_name = "igSetCursorPosX"]
    fn c_igSetCursorPosX(arg0: f32) -> ();
    #[link_name = "igSetCursorPosY"]
    fn c_igSetCursorPosY(arg0: f32) -> ();
    #[link_name = "igSetCursorScreenPos"]
    fn c_igSetCursorScreenPos(arg0: ImVec2) -> ();
    #[link_name = "igSetItemDefaultFocus"]
    fn c_igSetItemDefaultFocus() -> ();
    #[link_name = "igSetItemKeyOwner"]
    fn c_igSetItemKeyOwner(arg0: c_int) -> bool;
    #[link_name = "igSetKeyboardFocusHere"]
    fn c_igSetKeyboardFocusHere(arg0: c_int) -> ();
    #[link_name = "igSetMouseCursor"]
    fn c_igSetMouseCursor(arg0: c_int) -> ();
    #[link_name = "igSetNavCursorVisible"]
    fn c_igSetNavCursorVisible(arg0: bool) -> ();
    #[link_name = "igSetNextFrameWantCaptureKeyboard"]
    fn c_igSetNextFrameWantCaptureKeyboard(arg0: bool) -> ();
    #[link_name = "igSetNextFrameWantCaptureMouse"]
    fn c_igSetNextFrameWantCaptureMouse(arg0: bool) -> ();
    #[link_name = "igSetNextItemAllowOverlap"]
    fn c_igSetNextItemAllowOverlap() -> ();
    #[link_name = "igSetNextItemStorageID"]
    fn c_igSetNextItemStorageID(arg0: c_uint) -> ();
    #[link_name = "igSetNextItemWidth"]
    fn c_igSetNextItemWidth(arg0: f32) -> ();
    #[link_name = "igSetNextWindowBgAlpha"]
    fn c_igSetNextWindowBgAlpha(arg0: f32) -> ();
    #[link_name = "igSetNextWindowClass"]
    fn c_igSetNextWindowClass(arg0: *const c_void) -> ();
    #[link_name = "igSetNextWindowContentSize"]
    fn c_igSetNextWindowContentSize(arg0: ImVec2) -> ();
    #[link_name = "igSetNextWindowFocus"]
    fn c_igSetNextWindowFocus() -> ();
    #[link_name = "igSetNextWindowScroll"]
    fn c_igSetNextWindowScroll(arg0: ImVec2) -> ();
    #[link_name = "igSetNextWindowSizeConstraints"]
    fn c_igSetNextWindowSizeConstraints(arg0: ImVec2, arg1: ImVec2, arg2: *mut c_void, arg3: *mut c_void) -> ();
    #[link_name = "igSetNextWindowViewport"]
    fn c_igSetNextWindowViewport(arg0: c_uint) -> ();
    #[link_name = "igSetScrollFromPosX"]
    fn c_igSetScrollFromPosX(arg0: f32, arg1: f32) -> ();
    #[link_name = "igSetScrollFromPosY"]
    fn c_igSetScrollFromPosY(arg0: f32, arg1: f32) -> ();
    #[link_name = "igSetScrollHereX"]
    fn c_igSetScrollHereX(arg0: f32) -> ();
    #[link_name = "igSetScrollHereY"]
    fn c_igSetScrollHereY(arg0: f32) -> ();
    #[link_name = "igSetScrollX"]
    fn c_igSetScrollX(arg0: f32) -> ();
    #[link_name = "igSetScrollY"]
    fn c_igSetScrollY(arg0: f32) -> ();
    #[link_name = "igSetStateStorage"]
    fn c_igSetStateStorage(arg0: *mut c_void) -> ();
    #[link_name = "igSetTabItemClosed"]
    fn c_igSetTabItemClosed(arg0: *const c_char) -> ();
    #[link_name = "igSetWindowFocus"]
    fn c_igSetWindowFocus() -> ();
    #[link_name = "igSetWindowFocusStr"]
    fn c_igSetWindowFocusStr(arg0: *const c_char) -> ();
    #[link_name = "igSetWindowFontScale"]
    fn c_igSetWindowFontScale(arg0: f32) -> ();
    #[link_name = "igShowAboutWindow"]
    fn c_igShowAboutWindow(arg0: *mut bool) -> ();
    #[link_name = "igShowDebugLogWindow"]
    fn c_igShowDebugLogWindow(arg0: *mut bool) -> ();
    #[link_name = "igShowDemoWindow"]
    fn c_igShowDemoWindow(arg0: *mut bool) -> ();
    #[link_name = "igShowFontSelector"]
    fn c_igShowFontSelector(arg0: *const c_char) -> ();
    #[link_name = "igShowIDStackToolWindow"]
    fn c_igShowIDStackToolWindow(arg0: *mut bool) -> ();
    #[link_name = "igShowMetricsWindow"]
    fn c_igShowMetricsWindow(arg0: *mut bool) -> ();
    #[link_name = "igShowStyleEditor"]
    fn c_igShowStyleEditor(arg0: *mut c_void) -> ();
    #[link_name = "igShowStyleSelector"]
    fn c_igShowStyleSelector(arg0: *const c_char) -> bool;
    #[link_name = "igShowUserGuide"]
    fn c_igShowUserGuide() -> ();
    #[link_name = "igSliderAngle"]
    fn c_igSliderAngle(arg0: *const c_char, arg1: *mut f32, arg2: f32, arg3: f32, arg4: *const c_char, arg5: c_int) -> bool;
    #[link_name = "igSliderFloat"]
    fn c_igSliderFloat(arg0: *const c_char, arg1: *mut f32, arg2: f32, arg3: f32, arg4: *const c_char, arg5: c_int) -> bool;
    #[link_name = "igSliderFloat3"]
    fn c_igSliderFloat3(arg0: *const c_char, arg1: *mut f32, arg2: f32, arg3: f32, arg4: *const c_char, arg5: c_int) -> bool;
    #[link_name = "igSliderFloat4"]
    fn c_igSliderFloat4(arg0: *const c_char, arg1: *mut f32, arg2: f32, arg3: f32, arg4: *const c_char, arg5: c_int) -> bool;
    #[link_name = "igSliderInt"]
    fn c_igSliderInt(arg0: *const c_char, arg1: *mut c_int, arg2: c_int, arg3: c_int, arg4: *const c_char, arg5: c_int) -> bool;
    #[link_name = "igSmallButton"]
    fn c_igSmallButton(arg0: *const c_char) -> bool;
    #[link_name = "igSpacing"]
    fn c_igSpacing() -> ();
    #[link_name = "igStyleColorsClassic"]
    fn c_igStyleColorsClassic(arg0: *mut c_void) -> ();
    #[link_name = "igStyleColorsDark"]
    fn c_igStyleColorsDark(arg0: *mut c_void) -> ();
    #[link_name = "igStyleColorsLight"]
    fn c_igStyleColorsLight(arg0: *mut c_void) -> ();
    #[link_name = "igTabItemButton"]
    fn c_igTabItemButton(arg0: *const c_char, arg1: c_int) -> bool;
    #[link_name = "igTableAngledHeadersRow"]
    fn c_igTableAngledHeadersRow() -> ();
    #[link_name = "igTableGetColumnCount"]
    fn c_igTableGetColumnCount() -> c_int;
    #[link_name = "igTableGetColumnFlags"]
    fn c_igTableGetColumnFlags(arg0: c_int) -> c_int;
    #[link_name = "igTableGetColumnIndex"]
    fn c_igTableGetColumnIndex() -> c_int;
    #[link_name = "igTableGetColumnName"]
    fn c_igTableGetColumnName(arg0: c_int) -> *const c_char;
    #[link_name = "igTableGetHoveredColumn"]
    fn c_igTableGetHoveredColumn() -> c_int;
    #[link_name = "igTableGetRowIndex"]
    fn c_igTableGetRowIndex() -> c_int;
    #[link_name = "igTableGetSortSpecs"]
    fn c_igTableGetSortSpecs() -> *mut c_void;
    #[link_name = "igTableHeader"]
    fn c_igTableHeader(arg0: *const c_char) -> ();
    #[link_name = "igTableHeadersRow"]
    fn c_igTableHeadersRow() -> ();
    #[link_name = "igTableNextColumn"]
    fn c_igTableNextColumn() -> bool;
    #[link_name = "igTableNextRow"]
    fn c_igTableNextRow(arg0: c_int, arg1: f32) -> ();
    #[link_name = "igTableSetColumnEnabled"]
    fn c_igTableSetColumnEnabled(arg0: c_int, arg1: bool) -> ();
    #[link_name = "igTableSetColumnIndex"]
    fn c_igTableSetColumnIndex(arg0: c_int) -> bool;
    #[link_name = "igTableSetupColumn"]
    fn c_igTableSetupColumn(arg0: *const c_char, arg1: c_int, arg2: f32, arg3: c_uint) -> ();
    #[link_name = "igTableSetupScrollFreeze"]
    fn c_igTableSetupScrollFreeze(arg0: c_int, arg1: c_int) -> ();
    #[link_name = "igTextLink"]
    fn c_igTextLink(arg0: *const c_char) -> bool;
    #[link_name = "igTextLinkOpenURL"]
    fn c_igTextLinkOpenURL(arg0: *const c_char, arg1: *const c_char) -> bool;
    #[link_name = "igTextUnformatted"]
    fn c_igTextUnformatted(arg0: *const c_char, arg1: *const c_char) -> ();
    #[link_name = "igTreeNode"]
    fn c_igTreeNode(arg0: *const c_char) -> bool;
    #[link_name = "igTreeNodeEx"]
    fn c_igTreeNodeEx(arg0: *const c_char, arg1: c_int) -> bool;
    #[link_name = "igTreeNodeGetOpen"]
    fn c_igTreeNodeGetOpen(arg0: c_uint) -> bool;
    #[link_name = "igTreePop"]
    fn c_igTreePop() -> ();
    #[link_name = "igTreePush"]
    fn c_igTreePush(arg0: *const c_char) -> ();
    #[link_name = "igTreePushPtr"]
    fn c_igTreePushPtr(arg0: *const c_void) -> ();
    #[link_name = "igUnindent"]
    fn c_igUnindent(arg0: f32) -> ();
    #[link_name = "igUpdatePlatformWindows"]
    fn c_igUpdatePlatformWindows() -> ();
    #[link_name = "igVSliderFloat"]
    fn c_igVSliderFloat(arg0: *const c_char, arg1: ImVec2, arg2: *mut f32, arg3: f32, arg4: f32, arg5: *const c_char, arg6: c_int) -> bool;
    #[link_name = "igVSliderInt"]
    fn c_igVSliderInt(arg0: *const c_char, arg1: ImVec2, arg2: *mut c_int, arg3: c_int, arg4: c_int, arg5: *const c_char, arg6: c_int) -> bool;
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igAcceptDragDropPayload(arg0: *const c_char, arg1: c_int) -> *const c_void {
    c_igAcceptDragDropPayload(arg0, arg1)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igAlignTextToFramePadding() -> () {
    c_igAlignTextToFramePadding();
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igArrowButton(arg0: *const c_char, arg1: c_int) -> bool {
    c_igArrowButton(arg0, arg1)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBegin(arg0: *const c_char, arg1: *mut bool, arg2: c_int) -> bool {
    c_igBegin(arg0, arg1, arg2)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginChild(arg0: *const c_char, arg1: ImVec2, arg2: c_int, arg3: c_int) -> bool {
    c_igBeginChild(arg0, arg1, arg2, arg3)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginChildID(arg0: c_uint, arg1: ImVec2, arg2: c_int, arg3: c_int) -> bool {
    c_igBeginChildID(arg0, arg1, arg2, arg3)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginCombo(arg0: *const c_char, arg1: *const c_char, arg2: c_int) -> bool {
    c_igBeginCombo(arg0, arg1, arg2)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginDisabled(arg0: bool) -> () {
    c_igBeginDisabled(arg0);
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginDragDropSource(arg0: c_int) -> bool {
    c_igBeginDragDropSource(arg0)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginDragDropTarget() -> bool {
    c_igBeginDragDropTarget()
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginGroup() -> () {
    c_igBeginGroup();
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginItemTooltip() -> bool {
    c_igBeginItemTooltip()
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginListBox(arg0: *const c_char, arg1: ImVec2) -> bool {
    c_igBeginListBox(arg0, arg1)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginMainMenuBar() -> bool {
    c_igBeginMainMenuBar()
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginMenu(arg0: *const c_char, arg1: bool) -> bool {
    c_igBeginMenu(arg0, arg1)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginMenuBar() -> bool {
    c_igBeginMenuBar()
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginMultiSelect(arg0: c_int, arg1: c_int, arg2: c_int) -> *mut c_void {
    c_igBeginMultiSelect(arg0, arg1, arg2)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginPopup(arg0: *const c_char, arg1: c_int) -> bool {
    c_igBeginPopup(arg0, arg1)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginPopupContextItem(arg0: *const c_char, arg1: c_int) -> bool {
    c_igBeginPopupContextItem(arg0, arg1)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginPopupContextVoid(arg0: *const c_char, arg1: c_int) -> bool {
    c_igBeginPopupContextVoid(arg0, arg1)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginPopupContextWindow(arg0: *const c_char, arg1: c_int) -> bool {
    c_igBeginPopupContextWindow(arg0, arg1)
}

#[no_mangle]
pub unsafe extern "C" fn imgui_wasm_igBeginPopupModal(arg0: *const c_char, arg1: *mut bool, arg2: c_int) -> bool {
    c_igBeginPopupModal(arg0, arg1, arg2)
}
